# sql_project

./: Query_1.sql  Query_10.sql  Query_11.sql  Query_12.sql  Query_2.sql  Query_3.sql  Query_4.sql  Query_5.sql  Query_6.sql  Query_7.sql  Query_8.sql  Query_9.sql  main.py  pyproject.toml  sqlite_homework.sqlite
